<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph_on_boarding"
    app:startDestination="@id/nav_on_boarding">

    <fragment
        android:id="@+id/main"
        android:name="com.plogging.ecorun.ui.main.MainFragment"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_on_boarding"
        android:name="com.plogging.ecorun.ui.main.onboarding.OnBoardingFragment"
        tools:layout="@layout/fragment_on_boarding">

        <action
            android:id="@+id/action_on_boarding_to_main"
            app:destination="@id/main"
            app:popUpTo="@id/nav_on_boarding"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>